--- a/resource/UavQgc.ui
+++ b/resource/UavQgc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1200</width>
-    <height>800</height>
+    <width>1206</width>
+    <height>817</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -56,7 +56,7 @@
        </size>
       </property>
       <property name="text">
-       <string>select config</string>
+       <string>预留项</string>
       </property>
      </widget>
     </item>
@@ -167,7 +167,7 @@
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>10.42.0.2</string>
+         <string>10.1.1.101</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -197,7 +197,7 @@
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>luenberger</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -227,7 +227,7 @@
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>111</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -562,7 +562,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>10.42.0.1</string>
+         <string>10.1.1.102</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -592,7 +592,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>luenberger</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -622,7 +622,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>111</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -940,7 +940,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>10.42.0.2</string>
+         <string>10.1.1.103</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -970,7 +970,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>luenberger</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
@@ -1000,7 +1000,7 @@ border: 1px solid #3c3c3c;</string>
          <string notr="true">border: 2px solid #e0e0e0; border-radius: 8px; color: #7f8c8d; font-size: 12px;</string>
         </property>
         <property name="text">
-         <string>111</string>
+         <string>rcir</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
